feat: Initial setup data loader and similarity context, with recommendation

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 env/
-pycache/
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 *.pyw
-*.pyz
-*.pywz
-*.pyzw
-*.pyzwz
-*.pyzwzw
-*.pyzwzwz
+dist/
+build/
+*.egg-info/
+.DS_Store
+*.log
